Fixing spacing for headings and ctas in feature components

--- a/app/sass/framework/components/_bc-2-col-cards-feature.sass
+++ b/app/sass/framework/components/_bc-2-col-cards-feature.sass
@@ -1,8 +1,6 @@
 .bc-feature-component
 	&.bc-2-col-cards-feature 
-		.bc-feature-component__header
-			margin-left: calc((100% - 88%)/2) 
+		 
 		.bc-feature-component__content
 			@include makeContentGrid(1)
 		.bc-two-col-card 
-			
