--- a/app/sass/framework/components/_bc-4-col-feature.sass
+++ b/app/sass/framework/components/_bc-4-col-feature.sass
@@ -12,9 +12,6 @@
 @media screen and (min-width: $small)
 	.bc-feature-component
 		&.bc-4-col-feature
-			.bc-feature-component__header
-				margin-left: calc((100% - #{$content-max-width})/2)
-				margin-right: 0
 			.bc-feature-component__heading, .bc-feature-component__intro
 				grid-column: 1 / span 2
 @media screen and (min-width: $large)
@@ -25,4 +22,3 @@
 			&__intro
 				max-width: 800px
 				grid-column: 1 / span 3
-		
