--- a/app/sass/framework/components/_bc-feature-component.sass
+++ b/app/sass/framework/components/_bc-feature-component.sass
@@ -18,9 +18,6 @@
 	&__header
 		@include makeContentGrid(1, $max-width: $text-max-width)
 		margin-bottom: $vertical-unit * 2
-		width: 61.8%
-		margin-left: auto
-		margin-right: auto
 	&__cta
 		@include makeContentFlexbox()
 		margin-top: $vertical-unit/2
@@ -31,5 +28,15 @@
 	&__heading
 		font-size: $text-11
 		@include doFeatureHeading($heading-line-height, $h1)
+
+@media screen and (min-width: $large)
+	.bc-feature-component
+		&__header
+			max-width: $text-max-width 
+
+@media screen and (min-width: $x-large)
+	.bc-feature-component
+		&__header
+			margin-left: calc((100% - #{$content-max-width})/2) 
 		
 		
